--- a/src/bootstrap/scaffolding.styl
+++ b/src/bootstrap/scaffolding.styl
@@ -7,10 +7,12 @@ body
   margin 0
 
 .container
-  width 100%
+  width calc(100% - 20px)
+  padding 10px
 
 @media (min-width: 900px)
   .container
+    padding 0
     width 800px
     margin-left auto
     margin-right auto
