opti(navbar): improved few things on navbar

--- a/src/bootstrap/input.styl
+++ b/src/bootstrap/input.styl
@@ -5,7 +5,8 @@ textarea, input
   padding 8px
   font-family "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif
 
-input[type='text']
+input[type='text'],
+input[type='password']
   width 100%
 
 textarea
