--- a/src/components/header.styl
+++ b/src/components/header.styl
@@ -1,15 +1,13 @@
 header
   background #efefef
-  box-shadow 0 4px 2px -2px grey
+  box-shadow 0 3px 2px -2px lightgrey
 
   .admin
     padding 4px
-    background-color #333333
-    color #ffffff
+    font-family Arial
 
-    a
-      color #ffffff
-      font-family Arial
+  .navbar
+    padding 4px
 
-  h1
-    margin 10px
+    h1
+      margin 0
